# Financial-Assistant

./: README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml
src/tradeassistant/: __main__.py  analysis.py  config.py  data.py  indicators.py  report.py  scheduler.py  storage.py
tests/: test_analysis.py  test_config.py  test_e2e.py  test_indicators.py
